// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileDownloads renders multiple downloads correctly 1`] = `
<div>
  <div
    class="dropdown-row"
  >
    <select
      class="download-dropdown form-control"
    >
      <optgroup
        label="Download Group Name 1"
      >
        <option
          id="123-0-0"
          value="Download Name 1"
        >
          Download Name 1
        </option>
      </optgroup>
      <optgroup
        label="Download Group Name 2"
      >
        <option
          id="123-1-0"
          value="Download Name 2"
        >
          Download Name 2
        </option>
      </optgroup>
    </select>
    <a
      class="btn btn-sm btn-link"
      href="/"
    >
      download
    </a>
  </div>
  <div
    class="download-details small"
  >
    <span
      class="details"
    >
      <span
        class="detail-label"
      >
        label
      </span>
      :
       
      <span
        class="detail-value"
      >
        value
      </span>
    </span>
  </div>
</div>
`;

exports[`FileDownloads renders single download correctly 1`] = `
<div>
  <div
    class="dropdown-row"
  >
    <a
      class="btn btn-sm btn-link"
      href="/"
    >
      download
    </a>
  </div>
  <div
    class="download-details small"
  >
    <span
      class="details"
    >
      <span
        class="detail-label"
      >
        label
      </span>
      :
       
      <span
        class="detail-value"
      >
        value
      </span>
    </span>
  </div>
</div>
`;
